--- a/MacDown/MacDown-Info.plist
+++ b/MacDown/MacDown-Info.plist
@@ -37,7 +37,7 @@
 	<key>CFBundleIconFile</key>
 	<string></string>
 	<key>CFBundleIdentifier</key>
-	<string>org.uranusjr.${PRODUCT_NAME:rfc1034identifier}</string>
+	<string>com.uranusjr.${PRODUCT_NAME:rfc1034identifier:lower}</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
