Update ingore files and supress dep warnings

--- a/.gitignore
+++ b/.gitignore
@@ -169,6 +169,8 @@ xcuserdata
 #
 
 Pods/
+Dependency/peg-markdown-highlight/pmh_parser_core.c
 Dependency/peg-markdown-highlight/pmh_parser.c
 Dependency/peg-markdown-highlight/*.o
+Dependency/peg-markdown-highlight/greg/*.o
 Dependency/peg-markdown-highlight/greg/greg
