Add MIME type for UTI imports

--- a/MacDown/MacDown-Info.plist
+++ b/MacDown/MacDown-Info.plist
@@ -87,6 +87,11 @@
 					<string>md</string>
 					<string>markdown</string>
 				</array>
+				<key>public.mime-type</key>
+				<array>
+					<string>text/x-markdown</string>
+					<string>text/plain</string>
+				</array>
 			</dict>
 		</dict>
 	</array>
