Add switch between beta and normal update URLs
The URL does not work yet; will need to update server.
Fix #39

--- a/MacDown/MacDown-Info.plist
+++ b/MacDown/MacDown-Info.plist
@@ -78,6 +78,8 @@
 	<string>MainMenu</string>
 	<key>NSPrincipalClass</key>
 	<string>NSApplication</string>
+	<key>SUBetaFeedURL</key>
+	<string>http://macdown.uranusjr.com/sparkle/macdown-beta/appcast.xml</string>
 	<key>SUFeedURL</key>
 	<string>http://macdown.uranusjr.com/sparkle/macdown/appcast.xml</string>
 	<key>SUPublicDSAKeyFile</key>
