--- a/MacDown.xcodeproj/xcshareddata/xcschemes/MacDown.xcscheme
+++ b/MacDown.xcodeproj/xcshareddata/xcschemes/MacDown.xcscheme
@@ -92,5 +92,14 @@
    <ArchiveAction
       buildConfiguration = "Release"
       revealArchiveInOrganizer = "YES">
+      <PostActions>
+         <ExecutionAction
+            ActionType = "Xcode.IDEStandardExecutionActionsCore.ExecutionActionType.ShellScriptAction">
+            <ActionContent
+               title = "Run Script"
+               scriptText = "echo &quot;ARCHIVE_PATH: $ARCHIVE_PATH&quot;">
+            </ActionContent>
+         </ExecutionAction>
+      </PostActions>
    </ArchiveAction>
 </Scheme>
