Replace MathJax with KaTeX.
[KaTeX](https://github.com/Khan/KaTeX) is much faster than MathJax. Have
a look at the difference:

http://youtu.be/zheo_dTWhfs

Things in this commit:
* Remove MathJax
* Add KaTeX js and css
* Add KaTeX fonts and add them to "Fonts provided by application" in
  MacDown-info.plist. A spot check suggests that this worked to make
  them accessible from the webview.
* Add KaTeX wather to run KaTeX over math
* Make hoedown a submodule rather than a Pod. Sadly hoedown version
  2.0.0 (the latest release) is a year old and better math support has
  been added since then.
  - Note they're planning to release 3.0.0 soon
    https://github.com/hoedown/hoedown/issues/136
* Add `hoedown_patch_render_math` to wrap math in a .katex span.
* Remove note that math support requires an internet connection.
  - Note that I'd strongly prefer to remove the math option entirely
    (always enabled) since it's a better experience now.

I tested all three code paths in watchkatex.js (the third should never
happen, so I tested it by commenting out the ParseError case).

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "Dependency/prism"]
 	path = Dependency/prism
 	url = https://github.com/LeaVerou/prism.git
+[submodule "Dependency/hoedown"]
+	path = Dependency/hoedown
+	url = https://github.com/hoedown/hoedown.git
