--- a/.gitignore
+++ b/.gitignore
@@ -168,6 +168,9 @@ xcuserdata
 # Other files
 #
 
+# This needs to be included explicitly because we excluded *.lock previously.
+!Podfile.lock
+
 Build/
 Pods/
 Dependency/peg-markdown-highlight/pmh_parser_core.c
