Freeze Cocoapods to 0.34 to make building work
See #220 and CocoaPods/CocoaPods#2559.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: objective-c
 before_install:
-  - "gem install cocoapods --no-rdoc --no-ri"
+  - "gem install cocoapods --no-rdoc --no-ri --version 0.34.4"
 xcode_workspace: MacDown.xcworkspace
 xcode_scheme: MacDown
