--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "Dependency/prism"]
 	path = Dependency/prism
-	url = https://github.com/LeaVerou/prism.git
+	url = https://github.com/PrismJS/prism.git
