Use bindings to only enable open quickly when there's a current _saved_ document

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+######
+# Xcode 6
+
+MacDown.xcworkspace/xcshareddata/MacDown.xcscmblueprint
+
 #########################
 # .gitignore file for Xcode4 and Xcode5 Source projects
 #
@@ -35,7 +40,7 @@
 *.swp
 
 # *.lock - this is used and abused by many editors for many different things.
-#    For the main ones I use (e.g. Eclipse), it should be excluded 
+#    For the main ones I use (e.g. Eclipse), it should be excluded
 #    from source-control, but YMMV
 
 *.lock
@@ -47,7 +52,7 @@
 
 ####
 # Xcode temporary files that should never be committed
-# 
+#
 # NB: NIB/XIB files still exist even on Storyboard projects, so we want this...
 
 *~.nib
