Fix builds on Xcode 7

--- a/Dependency/peg-markdown-highlight/Makefile
+++ b/Dependency/peg-markdown-highlight/Makefile
@@ -12,7 +12,9 @@ pmh_parser_core.c : pmh_grammar.leg $(GREG)
 pmh_parser.c : pmh_parser_core.c pmh_parser_head.c pmh_parser_foot.c tools/combine_parser_files.sh
 	./tools/combine_parser_files.sh > $@
 
-.PHONY: clean test
+.PHONY: install clean distclean
+
+isntall: ALL
 
 clean:
 	rm -f pmh_parser_core.c pmh_parser.c *.o; \
