--- a/Dependency/version/Makefile
+++ b/Dependency/version/Makefile
@@ -3,7 +3,9 @@ ALL: version.h
 version.h:
 	bash ../../Tools/generate_version_header.sh
 
-.PHONY: ALL clean distclean
+.PHONY: install clean distclean
+
+install: ALL
 
 clean:
 	-rm version.h 2>/dev/null
