Add basic AppleScript support
Closes #324. Currently supports

* Basic file manipulations (create, open, close, quit)
* Markdown source read/write (text of document)
* Rendered HTML read (html of document)

--- a/MacDown/MacDown-Info.plist
+++ b/MacDown/MacDown-Info.plist
@@ -107,12 +107,16 @@
 			</dict>
 		</dict>
 	</dict>
+	<key>NSAppleScriptEnabled</key>
+	<true/>
 	<key>NSHumanReadableCopyright</key>
 	<string>Copyright © 2014–2016 Tzu-ping Chung.</string>
 	<key>NSMainNibFile</key>
 	<string>MainMenu</string>
 	<key>NSPrincipalClass</key>
 	<string>NSApplication</string>
+	<key>OSAScriptingDefinition</key>
+	<string>MacDown.sdef</string>
 	<key>SUBetaFeedURL</key>
 	<string>http://macdown.uranusjr.com/sparkle/macdown/testing/appcast.xml</string>
 	<key>SUFeedURL</key>
