--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,6 @@ osx_image: xcode7
 language: objective-c
 install:
   - "bundle install"
-  - "bundle exec pod install"
+  - "travis_wait bundle exec pod install"
 xcode_workspace: MacDown.xcworkspace
 xcode_scheme: MacDown
