--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,8 @@
 osx_image: xcode7
 language: objective-c
+cache:
+  - bundler
+  - cocoapods
 install:
   - "bundle install"
   - "travis_wait bundle exec pod install"
