Use `xcodebuild` instead of `xctool`
From [xctool][1]:

> Support for building projects with xctool is deprecated and isn't
> supported in Xcode 8 and later.

[1]: https://github.com/facebook/xctool/tree/0.3.1#building-xcode-7-only

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,7 @@ cache:
 install:
   - "bundle install"
   - "travis_wait bundle exec pod install"
-xcode_workspace: MacDown.xcworkspace
-xcode_scheme: MacDown
+before_script:
+  - set -o pipefail
+script:
+  - xcodebuild -workspace MacDown.xcworkspace -scheme MacDown test | xcpretty
