Extract common tools to utils module

--- a/.gitignore
+++ b/.gitignore
@@ -174,6 +174,7 @@ xcuserdata
 
 Build/
 Pods/
+Tools/__pycache__/
 Dependency/version/version.h
 Dependency/peg-markdown-highlight/pmh_parser_core.c
 Dependency/peg-markdown-highlight/pmh_parser.c
