--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,9 @@ cache:
 env:
   global:
     secure: Vyar5YYP3n5CXQWiGxxT2QGYCcZgrSECmMb0BxeaG60KrKfDuXIoj6+rL/VqSImIlaF7qiVHkhHQba8Gf9QHhktUtfK4PQLfE0DzogoFVp8IXaTVEg9wBDnHAiqdadMmY3Vt2blnIIBLiV5+lFWxuSYlX27TTlr1ieev9Z+fMC0=
+before_install:
+- rvm install 2.4.0
+- rvm use 2.4.0
 install:
 - bundle install
 - travis_wait bundle exec pod install
