Use the user pip

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ install:
 - travis_wait bundle exec pod install
 - curl https://bootstrap.pypa.io/get-pip.py -o get-pip.py
 - python get-pip.py --user
-- python -m pip install --user transifex-client
+- ~/Library/Python/2.7/bin/pip install --user transifex-client
 before_script:
 - set -o pipefail
 script:
