--- a/.travis.yml
+++ b/.travis.yml
@@ -11,8 +11,8 @@ install:
 - bundle install
 - travis_wait bundle exec pod install
 - curl https://bootstrap.pypa.io/get-pip.py -o get-pip.py
-- python get-pip.py --user
-- ~/Library/Python/2.7/bin/pip install --user transifex-client
+- python get-pip.py
+- python -m pip install transifex-client
 before_script:
 - set -o pipefail
 script:
