--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-osx_image: xcode9.2
+osx_image: xcode9.3
 language: objective-c
 cache:
 - bundler
@@ -10,9 +10,7 @@ env:
 install:
 - bundle install
 - travis_wait bundle exec pod install
-- curl https://bootstrap.pypa.io/get-pip.py -o get-pip.py
-- python get-pip.py
-- python -m pip install transifex-client
+- python -m pip install --user transifex-client
 before_script:
 - set -o pipefail
 script:
