x-macdown URL scheme implementation
Open a file from a browser with url of the form "x-macdown://open?url=file:///path/to/a/file&line=123&column=45"

FIXME: Could not figure out how to place the insertion point at a given line and column.

--- a/MacDown/MacDown-Info.plist
+++ b/MacDown/MacDown-Info.plist
@@ -4,6 +4,18 @@
 <dict>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleURLName</key>
+			<string>Macdown custom control</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>x-macdown</string>
+			</array>
+		</dict>
+	</array>
+
 	<key>CFBundleDocumentTypes</key>
 	<array>
 		<dict>
