--- a/MacDown.xcodeproj/xcshareddata/xcschemes/MacDown.xcscheme
+++ b/MacDown.xcodeproj/xcshareddata/xcschemes/MacDown.xcscheme
@@ -27,15 +27,6 @@
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
-      <MacroExpansion>
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "1FA6DE201941CC9E000409FB"
-            BuildableName = "MacDown.app"
-            BlueprintName = "MacDown"
-            ReferencedContainer = "container:MacDown.xcodeproj">
-         </BuildableReference>
-      </MacroExpansion>
       <Testables>
          <TestableReference
             skipped = "NO">
@@ -48,6 +39,17 @@
             </BuildableReference>
          </TestableReference>
       </Testables>
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "1FA6DE201941CC9E000409FB"
+            BuildableName = "MacDown.app"
+            BlueprintName = "MacDown"
+            ReferencedContainer = "container:MacDown.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
+      <AdditionalOptions>
+      </AdditionalOptions>
    </TestAction>
    <LaunchAction
       buildConfiguration = "Debug"
@@ -69,6 +71,8 @@
             ReferencedContainer = "container:MacDown.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <AdditionalOptions>
+      </AdditionalOptions>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
