--- a/MacDown/MacDown-Info.plist
+++ b/MacDown/MacDown-Info.plist
@@ -8,7 +8,7 @@
 	<array>
 		<dict>
 			<key>CFBundleURLName</key>
-			<string>Macdown custom control</string>
+			<string>MacDown custom control</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
 				<string>x-macdown</string>
