--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -51,3 +51,9 @@ jobs:
 
       - name: Export localizations
         run: xcodebuild -exportLocalizations -localizationPath "$LOCALIZATION_OUT"
+
+      - name: Set up code signing
+        run: bundle exec fastlane certificates
+        env:
+          MACDOWN_MATCH_REPOSITORY_ACCESS_TOKEN: ${{ secrets.MATCH_REPOSITORY_ACCESS_TOKEN }}
+          MATCH_PASSWORD: ${{ secrets.MATCH_REPOSITORY_PASSWORD }}
