--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -57,3 +57,6 @@ jobs:
         env:
           MACDOWN_MATCH_REPOSITORY_ACCESS_TOKEN: ${{ secrets.MATCH_REPOSITORY_ACCESS_TOKEN }}
           MATCH_PASSWORD: ${{ secrets.MATCH_REPOSITORY_PASSWORD }}
+
+      - name: Build a release
+        run: bundle exec fastlane build_release
